--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install base deps
+    - name: Install base dependencies
       run: |
         sudo apt update
         sudo apt install -y --no-install-recommends \
@@ -37,7 +37,6 @@ jobs:
           libdbus-1-dev libdb-dev \
           libavcodec-dev libavformat-dev libavutil-dev libswscale-dev \
           libudev-dev ca-certificates patchutils bison flex
-
         sudo ln -sf /usr/bin/pkgconf /usr/local/bin/pkg-config
 
     - name: Setup LLVM‑Mingw ARM64EC toolchain
@@ -49,7 +48,7 @@ jobs:
         rm llvm-mingw.tar.xz
         echo "$LLVM_MINGW_DIR/bin" >> "$GITHUB_PATH"
 
-    - name: Verify LLVM‑Mingw toolchain
+    - name: Verify LLVM‑Mingw tools
       run: |
         set -eux
         which aarch64-w64-mingw32-clang
@@ -64,27 +63,38 @@ jobs:
         mkdir -p "$WORKDIR/src"
         cd "$WORKDIR/src"
 
-        # upstream Wine 11.1
+        # Clone upstream Wine 11.1 source
         git clone --depth 1 --branch wine-11.1 https://gitlab.winehq.org/wine/wine.git wine
 
-        # Wine‑Staging 11.1
-        git clone --depth 1 --branch v11.1 https://gitlab.winehq.org/wine/wine-staging.git wine-staging
+        # Clone Wine‑Staging master (full latest staging patches)
+        git clone --depth 1 https://gitlab.winehq.org/wine/wine-staging.git wine-staging
 
-        # confirm staging patches are present
-        ls -l wine-staging/patches | head -n 10
+        cd wine-staging
+        echo "Staging patches snapshot:"
+        ls -l patches | head -n 8
+
+    - name: Determine staging upstream commit
+      id: upstream
+      run: |
+        cd "$STAGINGDIR"
+        UPSTREAM=$(./staging/patchinstall.py --upstream-commit)
+        echo "upstream_commit=$UPSTREAM" >> $GITHUB_OUTPUT
+
+    - name: Checkout Wine‑src at staging compatible commit
+      run: |
+        cd "$SRCDIR"
+        git fetch --depth 1
+        git checkout ${{ steps.upstream.outputs.upstream_commit }}
 
     - name: Apply Wine‑Staging patches
       run: |
         set -eux
         cd "$STAGINGDIR"
-        # patchinstall.py automatically computes patchdir = stagingdir + '/../patches'
         ./staging/patchinstall.py DESTDIR="$SRCDIR" --all --no-autoconf
-
-        # re‑generate configure scripts after staging
         cd "$SRCDIR"
         autoreconf -fiv
 
-    - name: Verify configure ready
+    - name: Validate configure exists
       run: |
         cd "$SRCDIR"
         test -f configure
@@ -99,7 +109,6 @@ jobs:
         export PKG_CONFIG=pkg-config
         export PKG_CONFIG_PATH="/usr/lib/aarch64/pkgconfig:${PKG_CONFIG_PATH:-}"
 
-        # configure upstream with staging included
         "$SRCDIR/configure" \
           --host=aarch64-w64-mingw32 \
           --enable-win64 \
@@ -121,7 +130,7 @@ jobs:
           -Dgallium-drivers= \
           -Dplatforms=none \
           -Dbuildtype=release
-        ninja -v
+        ninja
         ninja install --destdir="$EXTERNALDIR/mesa"
 
     - name: Integrate DXVK/VKD3D
@@ -153,7 +162,6 @@ jobs:
         cp -rv "$EXTERNALDIR/mesa/"* "$WCP_DIR/mesa/turnip/"
 
         cat > "$WCP_DIR/env.sh" << 'EOF'
-        #!/bin/sh
         export WINEDEBUG=-all
         export WINEESYNC=0
         export WINEFSYNC=0
@@ -167,14 +175,14 @@ jobs:
 
         cat > "$WCP_DIR/info.json" <<EOF
         {
-          "name": "Wine-11.1-Staging-PHAT-NTsync-DXVK-VKD3D-ARM64EC",
+          "name": "Wine-11.1-Staging-PHAT-ARM64EC",
           "version": "$WINE_VERSION",
           "arch": "arm64ec",
           "type": "phat"
         }
         EOF
 
-    - name: Upload artifact
+    - name: Upload .wcp artifact
       uses: actions/upload-artifact@v4
       with:
         name: wine-arm64ec-phat
