--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -174,6 +174,7 @@ jobs:
 
           "$WINEDIR/configure" \
             --host=aarch64-w64-mingw32 \
+            --with-wine-tools="$WINEDIR/build-tools/usr/local/bin" \
             --enable-win64 \
             --enable-wow64 \
             --disable-tests \
