--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -138,7 +138,7 @@ jobs:
 
             # Нативная конфигурация: только для сборки инструментов
             ./configure \
-            --prefix="$WINEDIR/build-tools" \
+            --prefix="$WINEDIR/build-tools/bin" \
             --disable-tests \
             --without-vulkan
 
@@ -150,7 +150,7 @@ jobs:
 
             # Проверка
             echo "Wine tools installed to:"
-            ls -l "$WINEDIR/build-tools/usr/local/bin" || true
+            ls -l "$WINEDIR/build-tools/bin" || true
 
           
       - name: Build Wine (current hypothesis mingw host)
