--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -96,7 +96,7 @@ jobs:
 
         # Конфиг Wine с prefix в build-tools
         ./configure \
-         --prefix="$WINEDIR/build-tools" \
+         --prefix="/home/runner/work/wine_11.1wcp/wine_11.1wcp/wine" \
          --disable-tests \
          --disable-win16 \
          --disable-wine9x \
